--- a/src/index.html
+++ b/src/index.html
@@ -54,5 +54,63 @@
             
         </div>
     </div>
+    <div class="advantages">
+        <div class="container">
+            <h1 class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</h1>
+        
+            <div class="advantages__wrapper">
+                <div class="advantages__item">
+                    <img src="icons/cup.png" alt="cup" class="advantages__img">
+                    <h2 class="advantages__subtitle">Делимся опытом</h2>
+                    <div class="advantages__descr">
+                        Наши сотрудники всегда готовы
+                        поделиться своим опытом, 
+                        так как сами бегают полумарафоны, 
+                        переплыли Босфор, готовятся к 
+                        соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/heart.png" alt="heart" class="advantages__img">
+                    <h2 class="advantages__subtitle">Заботимся о здоровье</h2>
+                    <div class="advantages__descr">
+                        Мы работаем для того, 
+                        чтобы Ваши занятия спортом шли на 
+                        пользу Вашему здоровью и были в 
+                        радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantages__item">
+                    <img src="icons/shoe.png" alt="shoe" class="advantages__img">
+                    <h2 class="advantages__subtitle">Учим бегать</h2>
+                    <div class="advantages__descr">
+                        Помогаем с обучением 
+                        правильной технике бега! 
+                        Дружим с крупнейшей школой бега в 
+                        России - 
+                        <a href="#" class="advantages__link">I LOVE RUNNING.</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<div class="consultation">
+    <div class="container">
+        <h2 class="title title_left">
+            Получите бесплатную консультацию <br>
+            по подбору пульсометра 
+        </h2>
+        <div class="consultation__descr">
+            Просто заполните форму заявки <br>
+             и мы перезвоним вам в течении 10 минут
+        </div>
+        <form class="fead-form" action="#">
+            <input name="name" required placeholder="Ваше имя" type="text">
+            <input name="phone" required placeholder="Ваш телефон" type="number">
+            <input name="email" required placeholder="Ваш E-mail" type="email">
+            <button class="button button_submit"> заказать кОНСУЛЬТАЦИЮ </button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
