--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <title>Pulse</title>
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <div class="promo">
+    <section class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -53,8 +54,8 @@
             </div>
             
         </div>
-    </div>
-    <div class="advantages">
+    </section>
+    <section class="advantages">
         <div class="container">
             <h1 class="advantages__title">НАШИ ПРЕИМУЩЕСТВА</h1>
         
@@ -93,8 +94,8 @@
                 </div>
             </div>
         </div>
-    </div>
-<div class="consultation">
+    </section>
+<section class="consultation">
     <div class="container">
         <h2 class="title title_left">
             Получите бесплатную консультацию <br>
@@ -111,6 +112,27 @@
             <button class="button button_submit"> заказать кОНСУЛЬТАЦИЮ </button>
         </form>
     </div>
-</div>
+</section>
+<section class="carousel">
+    <div class="container">
+        <div class="carousel__inner">
+            <div>
+                <img src="img/carousel/slide1.jpg" alt="slide1">
+            </div>
+            <div>
+                <img src="img/carousel/slide2.jpg" alt="slide2">
+            </div>
+            <div>
+                <img src="img/carousel/slide3.jpg" alt="slide3">
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
